[package]
name = "atomiclock_async"
version = "0.1.0"
edition = "2021"

[dependencies]
atomiclock = {git = "ssh://gitea@gitea.mermaid-gecko.ts.net/Metropolis/atomiclock.git"}
atomiclock_spinlock = {git = "ssh://gitea@gitea.mermaid-gecko.ts.net/Metropolis/atomiclock_spinlock.git"}
atomic-waker = "~1"
logwise = "~0"
